--- a/spec_battle_game/pubspec.yaml
+++ b/spec_battle_game/pubspec.yaml
@@ -6,13 +6,13 @@ publish_to: 'none'
 version: 0.1.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.0
-  shared_preferences: ^0.5.12+4
+  cupertino_icons: ^1.0.8
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
