--- a/spec_battle_game/pubspec.yaml
+++ b/spec_battle_game/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.2.0
+  battery_plus: ^7.0.0
 
 dev_dependencies:
   flutter_test:
